[gd_scene load_steps=2 format=2]

[ext_resource path="res://JavaScript/JS_Tests.gd" type="Script" id=1]

[node name="Control" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1022.0
margin_bottom = 603.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -75.5
margin_right = 96.0
margin_bottom = 75.5
grow_vertical = 0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
_sections_unfolded = [ "Grow Direction", "Size Flags" ]

[node name="Test 1" type="Button" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 11.0
margin_right = 192.0
margin_bottom = 51.0
rect_min_size = Vector2( 0, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Test 1"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="Test 2" type="Button" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 55.0
margin_right = 192.0
margin_bottom = 95.0
rect_min_size = Vector2( 0, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Test 2"
flat = false
align = 1

[node name="Test 3" type="Button" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 99.0
margin_right = 192.0
margin_bottom = 139.0
rect_min_size = Vector2( 0, 40 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Test 3"
flat = false
align = 1

[connection signal="pressed" from="VBoxContainer/Test 1" to="." method="_on_Test_1_pressed"]

[connection signal="pressed" from="VBoxContainer/Test 2" to="." method="_on_Test_2_pressed"]

[connection signal="pressed" from="VBoxContainer/Test 3" to="." method="_on_Test_3_pressed"]


